# LoopForge

./: CMakeLists.txt  LICENSE  README.md  main.cpp
libs/HydronicFloorEngine/: CMakeLists.txt
libs/HydronicFloorEngine/include/HydronicFloorEngine/: Room.hpp
libs/Primitives/: CMakeLists.txt
libs/Primitives/include/: Point.hpp  Polygon.hpp
libs/Primitives/include/Primitives/: Polygon.hpp
libs/Primitives/src/: Polygon.cpp
libs/Primitives/src/Primitives/: Polygon.cpp
